# Linear-Phased-Array

./: CMakeLists.txt  ChannelMat.m  README.md  addrms.m  calcGain.m  gPower.m  master.m
.github/workflows/: build.yml
Solution/: CudaSolution.vcxproj  CudaSolution.vcxproj.filters  PhaseArray.args.json  PhaseArray2.args.json  project.sln  project.vcxproj  project.vcxproj.filters
cpp/: project.vcxproj  project.vcxproj.filters
cpp/project/: args.h  common.h  coordinates.h  matplot.h  network.h  project.cpp  project.h  project.sln  project.vcxproj  project.vcxproj.filters  random.h  station.h
cpp/project/test/: Init_test_case.h  init_test.json
inc/: args.h  common.h  coordinates.h  network.h  project.h  station.h  visuals.h
matlab/: gPower.m  num.m
source/: compile.sh  project.sln  project.vcxproj  project.vcxproj.filters
source/inc/: args.h  common.h  matplot.h  network.h  project.h  random.h  station.h
source/src/: project.cpp
src/: antenna.cpp  antenna.cu  gui_project.cpp  project.cpp  reinforcement.py  rlmain.py
src/utils/: agent.py  common.py  mdp.py
tests/: init_test.json  init_test.json.info
